@@ -7,7 +7,9 @@
 ## Bug Fixes
 
  * Fixed: `Get-ProgramInstallInfo` fails when a program's `Version` registry key value can't be converted into a `Version` object.
-
+ * Fixed: `Test-Service` failed to detect if a device driver service is installed.
+ * Fixed: `Install-Service` fails if a service depends on a device driver. (Note: in our testing, we can't get a device driver set as a dependency. If you know what the secret sauce is to get this to work with sc.exe (or another means), please let us know.)
+ 
 
 # 2.3.0 (29 September 2016)
 
